--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
   "plugins": ["react", "jest"],
   "rules": {
     "linebreak-style": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   }
 }
