--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^27.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.3",
     "tailwindcss": "^3.2.7",
