--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.2",
     "core-js": "^3.24.1",
     "eslint-plugin-jest": "^24.7.0",
     "jest": "^27.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.3",
+    "rooks": "^7.14.1",
     "tailwindcss": "^3.2.7",
     "zustand": "^4.3.8"
   },
