--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "classnames": "^2.3.2",
     "core-js": "^3.24.1",
     "eslint-plugin-jest": "^24.7.0",
-    "jest": "^27.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/dom": "^9.3.0",
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
     "eslint": "^7.32.0",
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^8.0.1",
