--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/dom": "^9.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
     "eslint": "^7.32.0",
@@ -40,6 +41,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^8.0.1",
