--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
+    "cypress": "^12.17.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.26.0",
