--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/dom": "^9.3.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "babel-loader": "^8.3.0",
     "css-loader": "^5.2.7",
     "cypress": "^12.17.2",
